# vox-sdks

./: .gitignore  README.md  SDK_SYNC_FIXES.md  SDK_SYNC_FIXES_2.md  SDK_SYNC_FIXES_3.md
.github/workflows/: publish-typescript.yml  verify-elixir.yml  verify-typescript.yml
elixir/vox_rtc_server/: .gitignore  README.md  mix.exs
elixir/vox_rtc_server/lib/: vox_rtc_server.ex
elixir/vox_rtc_server/lib/vox_rtc_server/: application.ex  client.ex  protocol.ex  session.ex  transport.ex  types.ex
elixir/vox_rtc_server/priv/proto/: vox.proto
elixir/vox_rtc_server/test/: client_test.exs
elixir/vox_rtc_server/test/support/: fake_transport.ex
fixtures/: speech-context-v2.json
go/rtcserver/: README.md  client.go  client_test.go  gateway.go  gateway_test.go  go.mod  go.sum  session.go  socket.go  types.go
python/vox-rtc-server/: README.md  pyproject.toml
python/vox-rtc-server/src/vox_rtc_server/: __init__.py  client.py  session.py  types.py
python/vox-rtc-server/tests/: test_client.py
rust/rtcserver/: Cargo.toml  README.md
rust/rtcserver/src/: client.rs  error.rs  lib.rs  session.rs  socket.rs  types.rs
typescript/: package-lock.json  package.json
typescript/examples/express-rtc-proxy/: README.md  index.html  package-lock.json  package.json  server.js
typescript/examples/express-rtc-proxy/public/: index.html
typescript/examples/express-rtc-proxy/src/: App.jsx  styles.css
typescript/test/: vox-error-codes.test.ts
typescript/vox-rtc-client/: README.md  package-lock.json  package.json  tsconfig.json
typescript/vox-rtc-client/src/: client.ts  errors.ts  index.ts  signaling.ts  types.ts
typescript/vox-rtc-client/test/: client.test.ts  errors.test.ts
typescript/vox-rtc-server/: README.md  package-lock.json  package.json  tsconfig.json
typescript/vox-rtc-server/src/: client.ts  gateway.ts  index.ts  session.ts  types.ts
typescript/vox-rtc-server/test/: client.test.ts  gateway.test.ts
