[project]
name = "vox-rtc-server"
version = "0.2.5"
description = "Server-side Python SDK for Vox-hosted WebRTC sessions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "eleven-am" }]
dependencies = [
    "pondsocket-client==0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2,<2.0",
    "pytest>=9.0.1,<10.0",
    "ruff>=0.9.0,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vox_rtc_server"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
files = ["src", "tests"]
mypy_path = "src"
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["pondsocket_client", "pondsocket_client.*"]
ignore_missing_imports = true
