[package]
name = "vox-rtc-server"
version = "0.1.4"
edition = "2024"
license = "MIT"
authors = ["eleven-am"]
description = "Server-side Rust SDK for controlling Vox-hosted WebRTC sessions"
repository = "https://github.com/eleven-am/vox-sdks"
homepage = "https://github.com/eleven-am/vox-sdks"
keywords = ["vox", "webrtc", "realtime", "websocket"]
categories = ["api-bindings", "web-programming::websocket"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
url = "2"
pondsocket-client = "0.1.5"
pondsocket-common = "0.1.4"
